feat: Adding Unit Test classes

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,6 +15,21 @@ jxl.log
 jmx.log
 derby.log
 
+# Gradle artifacts
+.gradle
+.gradletasknamecache
+/build
+buildSrc/build
+/spring-*/build
+/framework-*/build
+/integration-tests/build
+/src/asciidoc/build
+spring-test/test-output/
+
+# Maven artifacts
+pom.xml
+/target/
+
 # Eclipse artifacts, including WTP generated manifests
 bin
 .classpath
