feat: MinIO configuration

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
 spring:
   application:
     name: Discography API
+
+minio:
+  url: http://localhost:9000
+  access-key: minio-admin
+  secret-key: minio-admin-password
+
+server:
+  port: 8080
