feat: Adding swagger and scalar
- Adding swagger and scalar dependencies;
- Adding swagger configuration;
- Adding swagger annotations on controllers and DTOs;
- Removing openapi.yaml file;
- Updating README file accordingly

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+api:
+  info:
+    title: "Discography API"
+    version: "0.0.1-SNAPSHOT"
+    description: "Discography API"
+    contact-name: "Marcos Oliveira"
+    contact-email: "fake@email.com"
+
 spring:
   application:
     name: Discography API
