--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -107,6 +107,16 @@
 			<version>${lombok-mapstruct-binding.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.15</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-scalar</artifactId>
+			<version>2.8.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
