--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,9 +40,10 @@ services:
     environment:
       MINIO_ROOT_USER: minio-admin
       MINIO_ROOT_PASSWORD: minio-admin-password
-    ports:
-      - "9000:9000" # API
-      - "9001:9001" # Admin Console
+      MINIO_SERVER_URL: http://localhost:9000
+    expose:
+      - "9000"
+      - "9001"
     volumes:
       - minio-data:/data
     networks:
@@ -53,6 +54,19 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
+  nginx-minio:
+    container_name: nginx-minio.dev.local
+    image: docker.io/nginx:alpine
+    depends_on:
+      - minio
+    ports:
+      - "9000:9000"
+    volumes:
+      - ./nginx-minio.conf:/etc/nginx/conf.d/default.conf:ro
+    networks:
+      - local-network
+    restart: unless-stopped
 
   minio-setup:
     container_name: minio-mc.dev.local
@@ -71,7 +85,7 @@ services:
       - local-network
 
   backend:
-    container_name: app.dev.local
+    container_name: api.dev.local
     build:
       context: backend/
       dockerfile: Dockerfile
@@ -86,12 +100,21 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres.dev.local:5432/discography_db
       SPRING_DATASOURCE_USERNAME: postgres-user
       SPRING_DATASOURCE_PASSWORD: postgres-password
-      MINIO_URL: http://minio.dev.local:9000
+      MINIO_URL: http://localhost:9000
       MINIO_ACCESS_KEY: minio-admin
       MINIO_SECRET_KEY: minio-admin-password
+      JWT_SECRET_KEY: Y29tcGxleC1zZWNyZXQta2V5LWZvci1qd3QtdG9rZW5zLWVuY291Z2gtY2hhbGxlbmdlLTIwMjY=
     networks:
       - local-network
+    extra_hosts:
+      - "localhost:host-gateway"
     restart: on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://localhost:8080/actuator/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
 
 volumes:
   postgres-data:
