feat: Regional Synchronization

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -50,3 +50,8 @@ springdoc:
     enabled: true
     path: /scalar
 
+external:
+  api:
+    regional:
+      url: https://integrador-argus-api.geia.vip
+
